--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debathena-linerva (1.11) unstable; urgency=low
+
+  * lose_setuid on /usr/lib/apache2/suexec and /usr/bin/lppasswd
+  * Add bind9 as a dependency
+
+ -- Nelson Elhage <nelhage@mit.edu>  Fri, 03 Oct 2008 22:06:22 -0400
+
 debathena-linerva (1.10) unstable; urgency=low
 
   * Update k5login.
