--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.13) unstable; urgency=low
+
+  * cut commented code
+
+ -- Greg Price <price@mit.edu>  Sat, 28 Feb 2009 15:57:01 -0500
+
 debathena-linerva (1.12) unstable; urgency=low
 
   * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
