--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 debathena-linerva (1.13) unstable; urgency=low
 
   * cut commented code
+  * EDIT_MOTD no longer exists in /etc/default/rcS
 
- -- Greg Price <price@mit.edu>  Sat, 28 Feb 2009 15:57:01 -0500
+ -- Greg Price <price@mit.edu>  Sat, 28 Feb 2009 16:32:13 -0500
 
 debathena-linerva (1.12) unstable; urgency=low
 
