--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debathena-linerva (1.14) unstable; urgency=low
+
+  * Move logcheck configuration into a separate git repository.
+  * Fix linerva-clean-setugid in the case where there are no
+	unexpected set[ug]id programs
+  * Divert access.conf.debathena rather than access.conf
+  * Update the motd for lenny
+
+ -- Nelson Elhage <nelhage@mit.edu>  Sat, 28 Feb 2009 20:17:12 -0500
+
 debathena-linerva (1.13) unstable; urgency=low
 
   [ Greg Price ]
