--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.19) unstable; urgency=low
+
+  * Change from sysklogd to rsyslog.
+
+ -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 12:38:43 -0500
+
 debathena-linerva (1.18) unstable; urgency=low
 
   * trivial motd fix
