In debathena-linerva:   * Create /tmp/uscreens for non-distribution-provided screen packages

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ debathena-linerva (1.20) unstable; urgency=low
     * Get tickets and tokens
     * Use an explicit AFS path (in case the automounter isn't working)
     * Not fail if a previous checkout failed
+  * Create /tmp/uscreens for non-distribution-provided screen packages
 
- -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 14:29:20 -0500
+ -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 14:30:02 -0500
 
 debathena-linerva (1.19) unstable; urgency=low
 
