--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ debathena-linerva (1.20) unstable; urgency=low
     * Not fail if a previous checkout failed
   * Create /tmp/uscreens for non-distribution-provided screen packages
   * Increase the OpenAFS cache size
+  * Fix linerva-install to deal with the package being moved
 
- -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 14:33:36 -0500
+ -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 14:36:09 -0500
 
 debathena-linerva (1.19) unstable; urgency=low
 
