--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ debathena-linerva (1.20) unstable; urgency=low
   * Create /tmp/uscreens for non-distribution-provided screen packages
   * Increase the OpenAFS cache size
   * Fix linerva-install to deal with the package being moved
+  * Add a couple more utilities to the suid whitelist
 
- -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 14:36:09 -0500
+ -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 14:46:59 -0500
 
 debathena-linerva (1.19) unstable; urgency=low
 
