--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.21) unstable; urgency=low
+
+  * Fix a typo in the init script.
+
+ -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 15:05:10 -0500
+
 debathena-linerva (1.20) unstable; urgency=low
 
   * Update the logcheck git checkout to:
