--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debathena-linerva (1.23) unstable; urgency=low
+
+  * Don't fail in the logcheck git checkout if previously attempted.
+  * chmod /var/run/screen in the initscript, not the postinst.
+  * Make the initscript run early.
+
+ -- Greg Price <price@mit.edu>  Sat, 07 Mar 2009 16:26:41 -0500
+
 debathena-linerva (1.22) unstable; urgency=low
 
   * traceroute.db doesn't expect suid, so let's use that, and not keep the
