In linerva:   [ Nelson Elhage ]   * chgrp -R logcheck /etc/logcheck/.   [ Anders Kaseorg ]   * Add an APT hook to zephyr on package installations.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debathena-linerva (1.24) unstable; urgency=low
+
+  [ Nelson Elhage ]
+  * chgrp -R logcheck /etc/logcheck/.
+
+  [ Anders Kaseorg ]
+  * Add an APT hook to zephyr on package installations.
+
+ -- Anders Kaseorg <andersk@mit.edu>  Mon, 09 Mar 2009 17:40:38 -0400
+
 debathena-linerva (1.23) unstable; urgency=low
 
   * Don't fail in the logcheck git checkout if previously attempted.
