--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.27) unstable; urgency=low
+
+  * Reboot on kernel panic after 60 seconds.
+
+ -- Evan Broder <broder@mit.edu>  Thu, 26 Mar 2009 16:08:27 -0400
+
 debathena-linerva (1.26) unstable; urgency=low
 
   * Only zephyr the basename of packages being installed.
