--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.28) unstable; urgency=low
+
+  * Add the hostname to the APT zephyr instance.
+
+ -- Anders Kaseorg <andersk@mit.edu>  Tue, 31 Mar 2009 00:39:55 -0400
+
 debathena-linerva (1.27) unstable; urgency=low
 
   * Reboot on kernel panic after 60 seconds.
