In linerva:   * Upgrade the apt-zephyr hook to version AWESOME!!!.     package=$1     oldver=$2     cmp=$3     newver=$4     if [ "$newver" = '-' ] && [ "$oldver" = '-' ]; then     elif [ "$newver" = '-' ]; then     elif [ "$oldver" = '-' ]; then     elif [ "$cmp" = '<' ]; then     elif [ "$cmp" = '=' ]; then     elif [ "$cmp" = '>' ]; then     else     fi     'VERSION 2')     'VERSION *')     '')     *)     zwrite ${CLASS:+-c "$CLASS"} ${INSTANCE:+-i "$INSTANCE"} ${REALM:+-r "$REALM"} ${SIG:+-s "$SIG"} ${OPCODE:+-O "$OPCODE"} ${ZAUTH:--d} ${RECIPIENTS:+$RECIPIENTS}

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.29) unstable; urgency=low
+
+  * Upgrade the apt-zephyr hook to version AWESOME!!!.
+
+ -- Anders Kaseorg <andersk@mit.edu>  Thu, 21 May 2009 00:24:22 -0400
+
 debathena-linerva (1.28) unstable; urgency=low
 
   * Add the hostname to the APT zephyr instance.
