--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.33) unstable; urgency=low
+
+  * Finish punting our DNS config.
+
+ -- Evan Broder <broder@mit.edu>  Sun, 21 Jun 2009 02:10:45 -0400
+
 debathena-linerva (1.32) unstable; urgency=low
 
   * Let mlocate be setgid.
