--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.34) unstable; urgency=low
+
+  * Don't fail to run the initscript if /tmp/uscreens already exists.
+
+ -- Evan Broder <broder@mit.edu>  Tue, 30 Jun 2009 00:40:44 -0400
+
 debathena-linerva (1.33) unstable; urgency=low
 
   * Finish punting our DNS config.
