--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.35) unstable; urgency=low
+
+  * Don't accept the root password over ssh.
+
+ -- Evan Broder <broder@mit.edu>  Thu, 01 Oct 2009 22:52:43 -0400
+
 debathena-linerva (1.34) unstable; urgency=low
 
   * Don't fail to run the initscript if /tmp/uscreens already exists.
