In linerva: Fix distribution from Ubuntu's dch.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debathena-linerva (1.37) karmic; urgency=low
+debathena-linerva (1.37) unstable; urgency=low
 
   * Configure bitlbee not to run its system daemon.
 
