In linerva:   * Set mmap_min_addr to 65536.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-linerva (1.39) unstable; urgency=low
+
+  * Set mmap_min_addr to 65536.
+
+ -- Evan Broder <broder@mit.edu>  Wed, 04 Nov 2009 14:46:43 -0500
+
 debathena-linerva (1.38) unstable; urgency=low
 
   * Add bash completion for linerva-install.
